# paylite

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-backend.yml
backend/: .dockerignore  Dockerfile  README.md  config.py  deployment.md  manage.py  migrate_db.py  pyproject.toml  run.py  test_db.py  utils.py
backend/auth/: __init__.py  decorators.py  routes.py
backend/core/: __init__.py  routes.py
backend/paylite-collection/admin/: create-admin.posting.yaml  log-admin.posting.yaml
backend/paylite-collection/auth/: login.posting.yaml  register.posting.yaml
backend/paylite-collection/core/: health.posting.yaml  root.posting.yaml
backend/paylite-collection/transactions/: all-transactions.posting.yaml  deposit.posting.yaml  my-transactions.posting.yaml  transfer.posting.yaml  user-all-transactions.posting.yaml  user-transactions.posting.yaml  withdraw.posting.yaml
backend/paylite-collection/users/: all-users.posting.yaml  create-user.posting.yaml  current-user.posting.yaml  delete-user.posting.yaml  get-user-by-id.posting.yaml  list-users.posting.yaml  update-user.posting.yaml
backend/paylite-collection/wallets/: get-my-wallet.posting.yaml  get-wallet-by-user-id.posting.yaml
backend/transactions/: routes.py
backend/users/: __init__.py  models.py  routes.py
backend/wallets/: routes.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  export.ts
(+27 files in other folders)
