[project]
name = "paylite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "faker>=40.1.2",
    "flask>=3.1.2",
    "flask-jwt-extended>=4.7.1",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
]
